# SafetyJim

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.gradle  config.json.example  config_example.json  config_example.toml  dbots.html  dbschema.sql  dbschema.txt  docker-compose.yml  fly.toml  gulpfile.js  main.go  main.ts  package-lock.json  package.json  schema.sql  settings.gradle  tsconfig.json  tslint.json
commands/: command.go  ping.go
config/: config.go
log/: log.go  logger.go
safetyjim/: bot.go  command.go  discord.go  handlers.go  inviteLink.go  ping.go  processor.go  safetyjim.go
scripts/: db2.1_to_2.2.py  db30to31.py
src/: config.rs  constants.rs  flags.rs  lib.rs  main.rs  main.ts  util.rs
src/commands/: ping.rs
src/commands/ban/: ban.ts
src/commands/clean/: clean-modlog.ts  clean.ts
src/commands/help/: help.ts
src/commands/info/: info.ts
src/commands/invite/: invite.ts
src/commands/kick/: kick.ts
src/commands/mute/: mute.ts
src/commands/ping/: ping.ts
src/commands/remind/: remind.ts
src/commands/settings/: settings.ts
src/commands/softban/: softban.ts
src/commands/tag/: tag.ts
src/commands/unban/: unban.ts
src/commands/unmute/: unmute.ts
src/commands/warn/: warn.ts
src/config/: config.ts  mod.rs
src/database/: bans.rs  database.ts  hardbans.rs  iam_roles.rs  invalid_uuids.rs  joins.rs  kicks.rs  mod.rs  mutes.rs  reminders.rs  settings.rs  softbans.rs  tags.rs  user_secrets.rs  warns.rs
src/database/models/: Bans.ts  CommandLogs.ts  Joins.ts  Kicks.ts  Mutes.ts  Reminders.ts  Settings.ts  Softbans.ts  Tags.ts  Warns.ts
src/database/sql/: createUserBan.sql  delUserBan.sql  getExpiredBans.sql  getGuildBans.sql  getModeratorsBans.sql  getUserBan.sql  initDatabase.sql
src/database/sql/bans/: count_guild_bans.sql  create_ban_time_index.sql  create_table.sql  insert_entity.sql  invalidate_entity.sql  invalidate_previous_bans_of_user.sql  select_ban_with_id.sql  select_expired_guild_bans.sql  select_guild_bans_paginated.sql  select_last_guild_ban.sql  update_entity.sql
src/database/sql/hardbans/: count_guild_hardbans.sql  create_hardban_time_index.sql  create_table.sql  insert_entity.sql  select_guild_hardbans_paginated.sql  select_hardban_with_id.sql  update_entity.sql
src/database/sql/iam_roles/: create_iam_roles_index_guild_id_role_id.sql  create_table.sql  delete_iam_role.sql  insert_entity.sql  select_guild_iam_role.sql  select_guild_iam_roles.sql
src/database/sql/invalid_uuids/: create_table.sql  select_invalid_uuid.sql
src/database/sql/joins/: create_table.sql  delete_guild_user_joins.sql  insert_entity.sql  invalidate_entity.sql  select_expired_joins.sql  update_entity.sql
src/database/sql/kicks/: count_actionable_guild_user_kicks.sql  count_guild_kicks.sql  create_kick_time_index.sql  create_table.sql  insert_entity.sql  select_guild_kicks_paginated.sql  select_kick_with_id.sql  update_entity.sql
src/database/sql/mutes/: count_actionable_guild_user_mutes.sql  count_guild_mutes.sql  create_mute_time_index.sql  create_table.sql  (+8 more)
src/discord/: discord_bot.rs  mod.rs  scheduled.rs
src/discord/message_processors/: invite_link.rs  mod.rs  spam_filter.rs  word_filter.rs
src/discord/slash_commands/: ban.rs  clean.rs  clean_bot.rs  clean_user.rs  hardban.rs  iam.rs  iam_not.rs  info.rs  invite.rs  kick.rs  massban.rs  melo.rs  mod.rs  mute.rs  ping.rs  remind.rs  role_create.rs  role_remove.rs  server.rs  softban.rs  tag.rs  tag_create.rs  tag_edit.rs  tag_list.rs  tag_remove.rs  unban.rs  unmute.rs  warn.rs  weather.rs  whois.rs  xkcd.rs
src/discord/util/: mod.rs  mod_log.rs  user_dm.rs
src/loggers/swearfilter/: swearfilter.ts
src/metrics/: metrics.ts
src/processors/inviteLink/: inviteLink.ts
src/processors/test/: test.ts
src/safetyjim/: safetyjim.ts  shard.ts  utils.ts
src/server/: mod.rs
src/server/endpoint/: ban.rs  captcha.html  captcha.rs  hardban.rs  kick.rs  login.rs  mod.rs  mute.rs  self_user.rs  settings.rs  softban.rs  warn.rs
src/server/model/: ban.rs  channel.rs  guild.rs  hardban.rs  kick.rs  mod.rs  mute.rs  role.rs  self_user.rs  setting.rs  softban.rs  user.rs  warn.rs
src/service/: ban.rs  guild.rs  guild_statistic.rs  hardban.rs  iam_role.rs  invalid_uuid.rs  join.rs  kick.rs  mod.rs  mute.rs  reminder.rs  setting.rs  shard_statistic.rs  softban.rs  tag.rs  user_secret.rs  warn.rs  watchdog.rs
(+213 files in other folders)
