[package]
name = "safetyjim"
version = "5.0.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
argh = "0.1.13"
async-recursion = "1.1.1"
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["macros"] }
chrono = "0.4.42"
envy = "0.4.2"
humantime = "2.3.0"
jsonwebtoken = {  version = "10.2.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
mimalloc = { version = "0.1.48", default-features = false }
moka = { version = "0.12.11", features = ["future"] }
once_cell = "1.21.3"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls-native-roots", "gzip", "json"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serenity = { git = "https://github.com/serenity-rs/serenity/", branch = "next", default-features = false, features = ["rustls_backend", "builder", "gateway", "http", "model", "collector", "unstable"] }
simsearch = "0.3.0"
smol_str = "0.3.4"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json", "registry", "env-filter"] }
typemap_rev = "0.4.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
